chapter7/7-7-restrict-etx-net.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-vmi-access
  namespace: kubevirt
spec:
  podSelector:
    matchLabels:
      kubevirt.io: vmi
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
        matchLabels:
          app: frontend
      ports:
        - protocol: TCP
          port: 22
